SET (libName flexiport)
GBX_ADD_LICENSE (LGPL)

SET (build TRUE)
GBX_REQUIRE_OPTION (build LIB ${libName} ON)

if(build)
	INCLUDE (${GBX_CMAKE_DIR}/UseBasicRules.cmake)

	OPTION (FLEXIPORT_INCLUDE_SERIAL "Include the serial port in FlexiPort" ON)
	OPTION (FLEXIPORT_INCLUDE_TCP "Include the TCP network port in FlexiPort" ON)
	OPTION (FLEXIPORT_INCLUDE_UDP "Include the UDP network port in FlexiPort" ON)
	OPTION (FLEXIPORT_INCLUDE_LOGGING "Include the log reader/writer ports in FlexiPort" ON)
	MARK_AS_ADVANCED (FLEXIPORT_INCLUDE_SERIAL FLEXIPORT_INCLUDE_TCP FLEXIPORT_INCLUDE_UDP)

    if(GBX_OS_QNX)
        SET (CMAKE_REQUIRED_LIBRARIES socket)
    endif(GBX_OS_QNX)
    CHECK_FUNCTION_EXISTS (getaddrinfo FLEXIPORT_HAVE_GETADDRINFO)
    SET (CMAKE_REQUIRED_LIBRARIES)

	SET (flexiport_config_h_in ${CMAKE_CURRENT_SOURCE_DIR}/flexiport_config.h.in)
	SET (flexiport_config_h ${CMAKE_CURRENT_BINARY_DIR}/flexiport_config.h)
	CONFIGURE_FILE (${flexiport_config_h_in} ${flexiport_config_h})
	INCLUDE_DIRECTORIES (${CMAKE_CURRENT_BINARY_DIR})

	SET (hdrs flexiport.h port.h timeout.h flexiport_types.h ${flexiport_config_h})
	SET (srcs flexiport.cpp port.cpp timeout.cpp ${flexiport_config_h})
	if(FLEXIPORT_INCLUDE_SERIAL)
		SET (hdrs ${hdrs} serialport.h)
		SET (srcs ${srcs} serialport.cpp)
	endif(FLEXIPORT_INCLUDE_SERIAL)
	if(FLEXIPORT_INCLUDE_TCP)
		SET (hdrs ${hdrs} tcpport.h)
		SET (srcs ${srcs} tcpport.cpp)
	endif(FLEXIPORT_INCLUDE_TCP)
	if(FLEXIPORT_INCLUDE_UDP)
		SET (hdrs ${hdrs} udpport.h)
		SET (srcs ${srcs} udpport.cpp)
	endif(FLEXIPORT_INCLUDE_UDP)
	if(FLEXIPORT_INCLUDE_LOGGING)
		SET (hdrs ${hdrs} logwriterport.h logreaderport.h)
		SET (srcs ${srcs} logwriterport.cpp logreaderport.cpp logfile.cpp)
	endif(FLEXIPORT_INCLUDE_LOGGING)

	if(WIN32)
		if(GBX_DEFAULT_LIB_TYPE STREQUAL SHARED)
			ADD_DEFINITIONS (-DFLEXIPORT_EXPORTS)
		else(GBX_DEFAULT_LIB_TYPE STREQUAL SHARED)
			ADD_DEFINITIONS (-DFLEXIPORT_STATIC)
		endif(GBX_DEFAULT_LIB_TYPE STREQUAL SHARED)
	endif(WIN32)
	GBX_ADD_LIBRARY(${libName} DEFAULT ${srcs})
	GBX_ADD_PKGCONFIG (${libName} "FlexiPort generic comms library" "" "" "" "")
	GBX_ADD_HEADERS (${libName} ${hdrs})
	if(WIN32)
		TARGET_LINK_LIBRARIES (${libName} Ws2_32)
	endif(WIN32)

	ADD_SUBDIRECTORY (utils)
	if(GBX_BUILD_TESTS)
		ADD_SUBDIRECTORY (test)
	endif(GBX_BUILD_TESTS)
	
	OPTION (FLEXIPORT_BUILD_BINDINGS "Build the Python bindings for Flexiport" OFF)
	if(FLEXIPORT_BUILD_BINDINGS)
		ADD_SUBDIRECTORY (python)
	endif(FLEXIPORT_BUILD_BINDINGS)
endif(build)
